[package]
name = "elposhigu"
description = "Minimal pastebin service written in Rust + Actix Web"
version = "0.1.0"
authors = ["James McMurray <jamesmcm03@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jamesmcm/elposhigu"
homepage = "https://github.com/jamesmcm/elposhigu"


[dependencies]
actix-web = "3.2.0"
tracing-actix-web = "0.2.1"
tracing = "0.1.21"
serde_derive = "1.0.117"
serde = "1.0.117"
base-62 = "0.1.1"
uuid = { version = "0.8.1", features = ["v4"] }
tracing-futures = "0.2.4"
anyhow = "1.0.34"
rusoto_core = { version = "0.45.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version = "0.45.0", default_features=false, features=["rustls"] }
tokio = "0.2"
lazy_static = "1.4.0"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
tracing-bunyan-formatter = "0.1.6"
actix-cors = "0.5.1"
